--- a/Tools.html
+++ b/Tools.html
@@ -35,7 +35,7 @@
                                     <li><a href="#">Tutorials</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
-                                    <a class="btn btn-info" href="index-VI.html">VIE</a>
+                                    <a class="btn btn-info" href="Tools-VI.html">VIE</a>
                                 </form>
                             </div>
                     </div>
