--- a/VI/Tools/Post2-Vi.html
+++ b/VI/Tools/Post2-Vi.html
@@ -34,7 +34,7 @@
                                     <li><a href="#">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
-                                    <a class="btn btn-info" href="index.html">EN</a>
+                                    <a class="btn btn-info" href="../../../index.html">EN</a>
                                 </form>
                             </div>
                     </div>
