--- a/Tools-VI.html
+++ b/Tools-VI.html
@@ -35,7 +35,7 @@
                                     <li><a href="#">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
-                                    <a class="btn btn-info" href="index.html">EN</a>
+                                    <a class="btn btn-info" href="Tools.html">EN</a>
                                 </form>
                             </div>
                     </div>
