--- a/VI/Tools/Post1-Vi.html
+++ b/VI/Tools/Post1-Vi.html
@@ -30,11 +30,11 @@
                                 <ul class="nav pull-left">
                                     <li class="active"><a href="index-VI.html">Trang Chủ</a></li>
                                     <li class = "nav-visible"><a href="About-VI.html">Về Tôi</a></li>
-                                    <li><a href="#">Công Cụ</a></li>
+                                    <li><a href="../../../Tools-VI.html">Công Cụ</a></li>
                                     <li><a href="#">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
-                                    <a class="btn btn-info" href="index.html">EN</a>
+                                    <a class="btn btn-info" href="../../../index.html">EN</a>
                                 </form>
                             </div>
                     </div>
