--- a/VI/Tools/Post2-Vi.html
+++ b/VI/Tools/Post2-Vi.html
@@ -28,9 +28,9 @@
                          </div>
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
-                                    <li class="active"><a href="index-VI.html">Trang Chủ</a></li>
-                                    <li class = "nav-visible"><a href="About-VI.html">Về Tôi</a></li>
-                                    <li><a href="#">Công Cụ</a></li>
+                                    <li class="active"><a href="../../../index-VI.html">Trang Chủ</a></li>
+                                    <li class = "nav-visible"><a href="../../../About-VI.html">Về Tôi</a></li>
+                                    <li><a href="../../../Tools-VI.html">Công Cụ</a></li>
                                     <li><a href="#">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
