--- a/About-VI.html
+++ b/About-VI.html
@@ -29,7 +29,7 @@
                                 <ul class="nav pull-left">
                                     <li class="active"><a href="index-VI.html">Trang Chủ</a></li>
                                     <li class = "nav-visible"><a href="About-VI.html">Về Tôi</a></li>
-                                    <li><a href="Tool-VI.html">Công Cụ</a></li>
+                                    <li><a href="Tools-VI.html">Công Cụ</a></li>
                                     <li><a href="#">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
