--- a/VI/Tools/Post2-Vi.html
+++ b/VI/Tools/Post2-Vi.html
@@ -24,7 +24,7 @@
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="index-VI.html">NhungLe</a>
+                            <a class="brand" href="../../../index-VI.html">NhungLe</a>
                          </div>
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
