--- a/index-VI.html
+++ b/index-VI.html
@@ -182,6 +182,7 @@
         <script src="Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
         <script src="Developer/common-files/js/jquery.parallax.min.js"></script>
         <script src="Developer/common-files/js/startup-kit.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
         <script src="Developer/samples/sample-04/js/script.js"></script>
            <script type='text/javascript'>                    var divElement = document.getElementById('viz1536686937935');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.5)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
