--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -122,6 +122,7 @@
                 Google Sheet. The sheet will be integrated some functions from Awesome Table to
                 visualize the information for  project managers and others to see the progress in their
                 owned sites.</p>
+        </div>
 
                 <!-- Place this tag where you want the Awesome Table Widget to render -->
                 <a style='text-align:' class="btn btn-large btn-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSfhdmr6hI_kP1gwxCJp9V6_HHcLp8mjWRNWcyTGOC5lB6fXgg/viewform">ADD NEW TASK</a>
