--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -131,7 +131,7 @@
     <div class ="entry-content">
         <div class="col span_1_of_8"></div>
 
-        <div class ="entry-content col span_6_of_8">
+        <div class ="col span_6_of_8">
                 
                 <a style='text-align:' class="btn btn-large btn-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSfhdmr6hI_kP1gwxCJp9V6_HHcLp8mjWRNWcyTGOC5lB6fXgg/viewform">ADD NEW TASK</a>
 
