--- a/Tools.html
+++ b/Tools.html
@@ -56,8 +56,9 @@
 <article id="post-1" class="post-1 post type-post status-publish format-image has-post-thumbnail hentry category-VBA tag-Excel post_format-post-format-image">
 
         <!-- Place this tag where you want the Awesome Table Widget to render -->
+    <div class="col span_6_of_6">
     <div data-type="AwesomeTableView" data-viewID="-LQKDvV3aieeB7CqGOnr"></div>
-
+    </div> 
 <!-- Place this within the <head> tag or just before the end of your <body> tag. -->
 
     </article><!-- #post-## -->
