--- a/Tools.html
+++ b/Tools.html
@@ -53,7 +53,7 @@
                                 
                     
 
-<article id="post-1" class="post-1 post type-post status-publish format-image has-post-thumbnail hentry category-VBA tag-Excel post_format-post-format-image">
+<article>
 
         <!-- Place this tag where you want the Awesome Table Widget to render -->
     <div class="entry-content span_6_of_6">
