--- a/Tools.html
+++ b/Tools.html
@@ -53,7 +53,7 @@
                                 
                     
 
-<article class="post entry-inner">
+<article class="post edit-link">
 
         <!-- Place this tag where you want the Awesome Table Widget to render -->
     <div class="entry-content span_6_of_6">
