--- a/Tools.html
+++ b/Tools.html
@@ -56,8 +56,7 @@
 <article class="post edit-link">
 
         <!-- Place this tag where you want the Awesome Table Widget to render -->
-    <div class="entry-content span_6_of_6">
-    <div data-type="AwesomeTableView" data-viewID="-LQKDvV3aieeB7CqGOnr"></div>
+    <iframe height="600px" width="100%" style="border:none;" src="https://view-awesome-table.com/-LQKDvV3aieeB7CqGOnr/view"></iframe>
     </div> 
 <!-- Place this within the <head> tag or just before the end of your <body> tag. -->
 
