--- a/Tools.html
+++ b/Tools.html
@@ -53,7 +53,7 @@
                                 
                     
 
-<article class="post edit-link">
+<article class="edit-link">
 
         <!-- Place this tag where you want the Awesome Table Widget to render -->
     <iframe height="600px" width="100%" style="border:none;" src="https://view-awesome-table.com/-LQKDvV3aieeB7CqGOnr/view"></iframe>
