--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -69,37 +69,32 @@
                 Monitoring and Evaluation assistant, most of the time I work  <span lang=VI>is </span>reviewing
                 number of solutions for designing monitoring information system to collect data
                 at different levels. Ideal solution needs to adapt with different requirements:
-                flexibility, easy to design fields of information, time and cost saving <span
-                lang=VI>for set-up</span>. Especially, the technology for setting up the system
-                is one key concern to design a monitoring information system.</p>
+                flexibility, easy to design fields of information. Especially,   the cost and 
+                time spending for setting up a system is one of the key concerns to design a 
+                monitoring information system </p>
 
                 <p style='text-align:justify'>&nbsp;</p>
 
-                <p style='text-align:justify'>I have studied and tried different
-                solutions to find the solutions <span lang=VI>whether</span> fit in with our
+                <p style='text-align:justify'>I have studied and tried different solutions to 
+                find the best solutions <span lang=VI>whether</span> fit in with our
                 requirements. Each of them has different pros and cons to use. One of those is
-                <a style='color:#4472C4' href ="https://awesome-table.com/">Awesome Table</a>, a cross cutting solution to match with what we looking for<span
+                <a style='color:#4472C4' href ="https://awesome-table.com/">Awesome Table</a>, 
+                a solution developed basis on G-Suite to match with what we looking for<span
                 lang=VI> (</span>Flexible, Easy to use, Free <span lang=VI>cost)</span>. <span
-                lang=VI>Moreover,</span> It is based on G-Suite for displaying data from Google
-                sheets. In my organization, we often work with Google sheets, forms to collect
-                data in case of timely reporting from number of field offices.  However, google
-                sheets has number of limitations including the display of information which
-                Awesome table helps to solve the issue.</p>
+                lang=VI>Moreover,</span> The key function of the solution is displaying data 
+                from Google sheets. 
 
-                <p style='text-align:justify'>&nbsp;</p>
-
-                <p style='text-align:justify'>The numbers of examples for
-                applying Awesome Table to display information in different uses (not only
-                Monitoring Information <span lang=VI>System</span>). What you need is a
+                 <p style='text-align:justify'>There is numbers of examples for
+                applying Awesome Table to display information in different uses. What you need is a
                 datasheet (Google sheet, Excel sheet) you can show the information in the interactive
                 <span lang=VI>and</span> dynamic way</p>
 
-                <p style='text-align:justify'>1. Products <span lang=VI>Catalogue</span></p>
+                <h4 style='text-align:justify'>1. Products <span lang=VI>Catalogue</span></h4>
                <p style="text-align:center;"> <img src="https://lh3.googleusercontent.com/V8KXCBp8T9hQ5lPIwQRHfLoEnm-1NUmsgyPHF6aIEjPtscDQiwl5tHFGriH572yQvBFufrF5iTEmfsHhkH4Quo9jCyvOBYDCU-oA28cmyEflfnDDIAq9HwaDE6LDaXzHcltRkMkZrw2nDZcLzvLjq9YyRZAAGJwzwW6RQW_KblEZl9HzTiL9qx8KhtSPqc2LQryPmQKq0thttzGYdXP0YW6e8_4Xeo5OTvAjhwuzzuHMh-CiLlbjb8Ppqq7eYK16Rz5bngYlnKkncjTUxtB6EqzC9wvhZN5ttdu3uxbAWAJmBjBbvpFsL9uh6aSjCDGRD1fSZ3ay61xyk2LGmEwEa59obJugyjsiB2UqFRvePjqi3IgwM1r0GET3Ua0zeagqL4FZNn7sJkPNswgY4AeQYzJQQBsgVlV1Z4AbgB0KmxwTQ3zC8zycX09znDzPq3xf2NI9ZY6gp-vxWwiCDU31N9woTPgjxZ-CfMxCjcImTyBEeV6lGEVYlooNCJDSpgbc9ZhfgdAtaltbxGnzXyA_UZ99ynSkJSyEyes9tNgO8K0LVk2Oz2-Z9xZ7SckRwFRoBJjHH9JJXgzuL4bur32t9mqtrWEdGeW-WBk7VdBYnf09ZAjzAq_RfbuQvyjFv2jU1yg24fQ9fw8jchAMM6fcQR1Z=w1099-h535-no" width="600" height="375" alt=""></p>
-                <p style='text-align:justify'>2. Online <span lang=VI>Movie</span>
-                Library</p>
+                <h4 style='text-align:justify'>2. Online <span lang=VI>Movie</span>
+                Library</h4>
                 <p style="text-align:center;"><img src="https://lh3.googleusercontent.com/ckSHJX7UZH2ZIrdh3Kw2TW7kNCIoQUQUZxJWMjDfDJ57aorNi2NR-kPNN27qrnxJIPM1gn_xQn03aIf7Vqi0YctSe3_iyljCnw23rhRdVMOj9lXEDmE0zJ7T0nBYkxgYTSAjGeq4ki1DT_-43RBVBJHcpc2pnhICTN0VhYhOZl15gDd7IDINW5JcwZLWlF8yfMHSQ24juWdeIr85ztJQ7luM9J0FenGp9h1D8UlXB5DW4ZubChYGWOw4PTn3MKjgilI5XqD8h8Vxxv7QaDlihxQ4AGMP60tiO3gsBbXKCaGZaGsSGmhlZY64TXtELpj8wCHL4VtgzRq_nnv9ELc6aeP3dsHyg6qmU6Ojm2JYfweuG1IM91xiKYu0pJoSt2sbe4IcPLHLCa-hvv3vzP5dXt3p-wzTYScIP0sp2rxW6mTaowaefhpwnomvQadEzYGhQzFa2Z12eoh94yb-2hM8t6tTjBSXAlKezow5le9Iv_Xj_cbCgfLKu3ncUREW71lF8p8Y3TlPfcsnxqGCwfgHPuKy2LFLTCB5Sz-lLUpglLy9LdIyD3s4ugsYtaK093VKnCJRy1aYZ8mqZ7rkQ5Ztdj8WmQcnajS5Cy8g9BWAWvwerFKPKUTLZre13iCZl7W_0VD80HzoTVRx7CA8qv7pjkQn=w996-h560-no" width="600" height="375" alt=""></p>
-                <p style='text-align:justify'>3. Global Directory Contact</p>
+                <h4 style='text-align:justify'>3. Global Directory Contact</h4>
                 <p style="text-align:center;"><img src="https://lh3.googleusercontent.com/m8HU1CWzXnAxk-N9zzRJlDylcDEeJS9_27r8brRei9rufYfrZvOsyuMk7gvIk2Xvb59MU4Nnqw0x5Eabcjm9cm1mDBzrmMDe07Xqn36CC4jntAA9YFP5pIBPPlhUQyj2M8HuZizsBsi11x6h93egsRqGEJiqOrMkiDx3uJk4109hwMdqLK3sqoposStJOLvJ7Jt5zr9C7uN1mljUG84BRQUVvu0YkZMModrhp6Tjs0PVJVS6QAFI2XaMwp68UfB4GiU4L4dCIIRr1Mf5xIpy-tdVK-8Djo_z8yRgikc_XISKAKtVMNOJvVyeZI9aYEEzdOiMJBiiEyxW5_LW5TuV2J3F0OEHnvWdIDY0I6qRMomh8Ks0CZBB8jWpjUrtvhFFOSNWJZVTom33wmSoXXVSoGHbFsbuoXsa1qq0wYyzcGDH1Z1d5XT9S5-9qULMZihJlBrAwrxzZWJQH0ji3BBI0Ej4DsBOgHbaivdRaO8dn2RNx-5YylUAnB6fidP1D5lP_AGQmV2gsQ5AJX5k9EqfouJVMbY-JtwoCkWgssT_BDyE7Pgt0UiuxRku3rU7FiACRqFVbXOjx5f-0S3TcdPzGxmQuJCP9geBVSL0AT-PQggxpAc4biWqBqn-ravCSj1iyfx4mj-B9-igQUjG2G5R4Y5h=w1103-h492-no" width="600" height="375" alt=""></p>
                 <p style='text-align:justify'>&nbsp;</p>
 
@@ -108,22 +103,32 @@
 
                 <p style='text-align:justify'>&nbsp;</p>
 
-                <p style='text-align:justify'>&nbsp;</p>
+               
 
-                <p style='text-align:justify'>When I start using Awesome Table,
-                I easily designed my owned tools for collecting reports. Here is my template
-                reporting tools used for your tracking activities in your owned projects and
-                collaborating with others. </p>
+                <p style='text-align:justify'>&nbsp;</p>
+                 <h4 style='text-align:justify'>Activity Reporting Tool</h4>
+                <p style='text-align:justify'>In my organization, we often work with Google sheets,
+                forms to collect data for reporting from number of field offices.  However, google
+                sheets has number of limitations including the display of information.</p>
+
+
+                <p style='text-align:justify'>&nbsp;</p>
+                <p style='text-align:justify'>When I first know Awesome Table, I immediately attracted 
+                with the way this solution used for visualizing data and interaticng with users. 
+                It is what I looking for to fill in the gaps when using Google sheet and Google forms. 
+
+                Here is my template of reporting tools used for my tracking activities in 
+                my owned projects and collaborating with others. </p>
 
                 <p style='text-align:justify'>&nbsp;</p>
 
                 <p style='text-align:justify'>For demonstrating functional
-                process of this tool, Information is collected by Google Form, then combined in
-                Google Sheet. The sheet will be integrated some functions from Awesome Table to
+                process of this tool, Information is collected by Google Form, then transfer to
+                Form Response Sheet. The sheet will be integrated some functions from Awesome Table to
                 visualize the information for  project managers and others to see the progress in their
                 owned sites.</p>
 
-                 <a style='text-align:center' class="btn btn-large btn-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSfhdmr6hI_kP1gwxCJp9V6_HHcLp8mjWRNWcyTGOC5lB6fXgg/viewform">ADD NEW TASK</a>
+                 <a style='text-align:center' class="btn btn-large btn-danger" onclick="openInNewTab('https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform');">ADD NEW ACTIVITY</a>
 
                 <div data-type="AwesomeTableView" data-viewID="-LOm628Mt_AawyhaLAnq"></div>
 
