--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -128,7 +128,7 @@
                 visualize the information for  project managers and others to see the progress in their
                 owned sites.</p>
 
-                 <a style='text-align:center' class="btn btn-large btn-danger" onclick="openInNewTab('https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform');">ADD NEW ACTIVITY</a>
+                 <a style='text-align:center' class="btn btn-large btn-danger" onclick="openInNewTab"('https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform');">ADD NEW ACTIVITY</a>
 
                 <div data-type="AwesomeTableView" data-viewID="-LOm628Mt_AawyhaLAnq"></div>
 
