--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -79,12 +79,12 @@
                 find the best solutions <span lang=VI>whether</span> fit in with our
                 requirements. Each of them has different pros and cons to use. One of those is
                 <a style='color:#4472C4' href ="https://awesome-table.com/">Awesome Table</a>, 
-                a solution developed basis on G-Suite to match with what we looking for<span
+                a solution developed on the basis of G-Suite to match with what we looking for<span
                 lang=VI> (</span>Flexible, Easy to use, Free <span lang=VI>cost)</span>. <span
                 lang=VI>Moreover,</span> The key function of the solution is displaying data 
                 from Google sheets. 
 
-                 <p style='text-align:justify'>There is numbers of examples for
+                 <p style='text-align:justify'>There is various examples for
                 applying Awesome Table to display information in different uses. What you need is a
                 datasheet (Google sheet, Excel sheet) you can show the information in the interactive
                 <span lang=VI>and</span> dynamic way</p>
@@ -108,14 +108,14 @@
                 <p style='text-align:justify'>&nbsp;</p>
                  <h4 style='text-align:justify'>Activity Reporting Tool</h4>
                 <p style='text-align:justify'>In my organization, we often work with Google sheets,
-                forms to collect data for reporting from number of field offices.  However, google
+                forms to collect data for reporting from field offices.  However, google
                 sheets has number of limitations including the display of information.</p>
 
 
                 <p style='text-align:justify'>&nbsp;</p>
                 <p style='text-align:justify'>When I first know Awesome Table, I immediately attracted 
-                with the way this solution used for visualizing data and interaticng with users. 
-                It is what I looking for to fill in the gaps when using Google sheet and Google forms. 
+                with the way this solution used for visualizing data and interacting with users. 
+                It is what I looking for to fill in the gaps when using Google sheets and Google forms. 
 
                 Here is my template of reporting tools used for my tracking activities in 
                 my owned projects and collaborating with others. </p>
