--- a/VI/Tools/Post3-Vi.html
+++ b/VI/Tools/Post3-Vi.html
@@ -35,7 +35,7 @@
                                     <li><a href="#">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
-                                    <a class="btn btn-info" href="../../../index.html">EN</a>
+                                    <a class="btn btn-info" href="https://nhungleh.com/EN/Tools/Post3-En.html">EN</a>
                                 </form>
                             </div>
                     </div>
