--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -68,7 +68,7 @@
                 <p style='text-align:justify'>When I started working as a junior
                 Monitoring and Evaluation assistant, most of the time I work  <span lang=VI>is </span>reviewing
                 number of solutions for designing monitoring information system to collect data
-                at different levels. An utilised solution needs to adapt with different requirements:
+                at different levels. A utilised solution needs to adapt with different requirements:
                 flexibility, easy to design fields of information. Especially,   the cost and 
                 time spending for setting up a system is one of the key concerns to design a 
                 monitoring information system </p>
@@ -149,13 +149,14 @@
 
                 <!-- Place this tag where you want the Awesome Table Widget to render -->
 </article>      
-       
+        <div id="fb-root"></div>
+        <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div>
         
 
 
 </main>
 </body>
-
+        <script src="../../../Developer/common-files/js/facebook-sdk.js"></script>
         <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
         <script src="../../../Developer/common-files/js/jquery-1.10.2.min.js"></script>
         <script src="../../../Developer/flat-ui/js/bootstrap.min.js"></script>
