--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -146,11 +146,11 @@
             </div>
         </footer>
         </div>
-
+        <div id="fb-root"></div>
+        <div class="fb-comments" data-href="https://nhungleh.com/EN/Tools/Post3-En.html" data-numposts="5"></div>
                 <!-- Place this tag where you want the Awesome Table Widget to render -->
 </article>      
-        <div id="fb-root"></div>
-        <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div>
+       
         
 
 
