--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -132,7 +132,7 @@
                 - Finding information by category lists
                 - Updating activity </p>
 
-                 <a style='text-align:center' class="btn btn-large btn-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform">ADD NEW ACTIVITY</a>
+                 <a style='text-align:center' class="btn btn-large btn-danger" onclick="openInNewTab('https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform');">ADD NEW ACTIVITY</a>
 
                  <p style='text-align:justify'>&nbsp;</p>
 
@@ -146,8 +146,11 @@
             </div>
         </footer>
         </div>
+        <div class="col span_1_of_6"></div> 
+        <div class="col span_4_of_6">
         <div id="fb-root"></div>
         <div class="fb-comments" data-href="https://nhungleh.com/EN/Tools/Post3-En.html" data-numposts="5"></div>
+        </div>
                 <!-- Place this tag where you want the Awesome Table Widget to render -->
 </article>      
        
