--- a/VI/Tools/Post3-Vi.html
+++ b/VI/Tools/Post3-Vi.html
@@ -118,7 +118,7 @@
         <div class="col span_1_of_6"></div> 
         <div class="col span_4_of_6">
         <div id="fb-root"></div>
-        <div class="fb-comments" data-href="https://nhungleh.com//Tools/Post3-Vi.html" data-numposts="5"></div>
+        <div class="fb-comments" data-href="https://nhungleh.com/VI/Tools/Post3-Vi.html" data-numposts="5"></div>
         </div>
 </article>      
        
