--- a/EN/Tools/Post2-En.html
+++ b/EN/Tools/Post2-En.html
@@ -92,7 +92,7 @@
         </div>
 </article>
 </main>
-
+<script src="../../../Developer/common-files/js/facebook-sdk.js"></script>
 <script src="../../../Developer/common-files/js/jquery-1.10.2.min.js"></script>
         <script src="../../../Developer/flat-ui/js/bootstrap.min.js"></script>
         <script src="../../../Developer/common-files/js/modernizr.custom.js"></script>
