--- a/VI/Tools/Post2-Vi.html
+++ b/VI/Tools/Post2-Vi.html
@@ -92,8 +92,8 @@
         </div>
 </article>
 </main>
-
-<script src="../../../Developer/common-files/js/jquery-1.10.2.min.js"></script>
+        <script src="../../../Developer/common-files/js/facebook-sdk.js"></script>
+        <script src="../../../Developer/common-files/js/jquery-1.10.2.min.js"></script>
         <script src="../../../Developer/flat-ui/js/bootstrap.min.js"></script>
         <script src="../../../Developer/common-files/js/modernizr.custom.js"></script>
         <script src="../../../Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
