--- a/VI/Tools/Post3-Vi.html
+++ b/VI/Tools/Post3-Vi.html
@@ -127,7 +127,7 @@
 
 </main>
 </body>
-
+        <script src="../../../Developer/common-files/js/facebook-sdk.js"></script>
         <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
         <script src="../../../Developer/common-files/js/jquery-1.10.2.min.js"></script>
         <script src="../../../Developer/flat-ui/js/bootstrap.min.js"></script>
