5Nov-Update_OpenInNewTab

--- a/EN/Tools/Post3-En.html
+++ b/EN/Tools/Post3-En.html
@@ -78,7 +78,7 @@
                 <p style='text-align:justify'>I have studied and tried different solutions to 
                 find the good solutions <span lang=VI>whether</span> fit in with our
                 requirements. Each of them has different pros and cons to use. One of those is
-                <a style='color:#4472C4' href ="https://awesome-table.com/">Awesome Table</a>, 
+                <a style='color:#4472C4' onclick="openInNewTab('https://awesome-table.com/');">Awesome Table</a>, 
                 a solution developed on the basis of G-Suite to match with what we looking for<span
                 lang=VI> (</span>Flexible, Easy to use, Free <span lang=VI>cost)</span>. <span
                 lang=VI>Moreover,</span> The key function of the solution is displaying data 
