--- a/VI/Tools/Post3-Vi.html
+++ b/VI/Tools/Post3-Vi.html
@@ -101,7 +101,7 @@
                 <br/>- Cập nhập lại các hoạt động đang trong quá trình thực hiện
                 <br/> Bạn có thể thử tương tác ngay trên mẫu dưới đây: </p>
 
-                 <a style='text-align:center' class="btn btn-large btn-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform">ADD NEW ACTIVITY</a>
+                 <a style='text-align:center' class="btn btn-large btn-danger" onclick="openInNewTab('https://docs.google.com/forms/d/e/1FAIpQLSfaMM1ItYMyGtyFC6gAv_fvgF7k5ryFACK6Y3ufqNge_yOGdQ/viewform');">ADD NEW ACTIVITY</a>
 
                  <p style='text-align:justify'>&nbsp;</p>
 
