--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -131,7 +131,7 @@
                     <br/> -   Lesson learnt: Bài học kinh nghiệm
                     <br/> -   Lesson learnt: Bài học kinh nghiệm
                 </p>
-                <table>
+                <table class="table table-hover table-bordered" style="width:100%;">
                     <tr>
                     <td>
                     <p>Tên trường thông tin</p>
