13Nov-Update1stTutorialPost-V2

--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -131,18 +131,23 @@
                     <br/> -   Lesson learnt: Bài học kinh nghiệm
                     <br/> -   Lesson learnt: Bài học kinh nghiệm
                 </p>
+            <div class="table-responsive">
                 <table class="table table-bordered" style="width:100%;">
-                    <tr>
-                    <td>
-                    <p>Tên trường thông tin</p>
-                    </td>
-                    <td>
-                    <p>Loại</p>
-                    </td>
-                    <td>Ghi Chú</p>
-                    </td>
-                   </tr>
-                   <tr>
+                <thead>
+                <tr>
+                <th style="width: 20%; text-align: left;">
+                <p>Tên trường thông tin</p>
+                </th>
+                <th style="width: 20%; text-align: left;">
+                <p>Loại</p>
+                </th>
+                <th text-align: left;">
+                <p>Ghi Chú</p>
+                </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
                     <td>
                     <p>Project Name</p>
                     </td>
@@ -244,7 +249,10 @@
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
+                </tbody>
                 </table>
+            </div>
+
                 <p style='text-align:justify'>Việc hình dung xác định các thông tin mình đang có phục vụ cho việc bạn sẽ xác định loại thông tin mình cần tìm kiếm trên thanh tìm kiếm. Awesome Table cho phép các loại tìm kiếm như sau</p>
                 <p style='text-align:justify'>&nbsp;</p>
                 <h6>StringFilter</h6>
