--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -136,13 +136,13 @@
                 <thead>
                 <tr>
                 <th style="width: 20%; text-align: left;">
-                <p>Tên trường thông tin</p>
+                <h7>Tên trường thông tin</h7>
                 </th>
                 <th style="width: 20%; text-align: left;">
-                <p>Loại</p>
+                <h7>Loại</h7>
                 </th>
-                <th text-align: left;">
-                <p>Ghi Chú</p>
+                <th style="text-align: left;">
+                <h7>Ghi Chú</h7>
                 </th>
                 </tr>
                 </thead>
@@ -150,10 +150,8 @@
                 <tr>
                     <td>
                     <p>Project Name</p>
-                    </td>
-                    <td>String hoặc Category</p>
-                    </td>
-                    <td>Thường tên dự án sẽ có 1 list danh sách các dự án vậy nên bạn nên tạo
+                    <p>String hoặc Category</p>
+                    <p>Thường tên dự án sẽ có 1 list danh sách các dự án vậy nên bạn nên tạo
                     ra một Category list cho các dự án tại sheet của mình ( Cách tạo: chọn cột
                     Project Name, Vào phần Data, Data Validation, Chọn item trong danh sách và
                     list ra các tên dự án)</p>
@@ -162,11 +160,7 @@
                    <tr>
                     <td>
                     <p>Activity Name</p>
-                    </td>
-                    <td>
                     <p>String</p>
-                    </td>
-                    <td>
                     <p>Tên các hoạt động thường tuỳ thuộc vào dự án và người thực hiện nên
                     không cố định tên nên mình để dạng string cho loại tên</p>
                     </td>
@@ -174,33 +168,21 @@
                    <tr>
                     <td>
                     <p>Start Date</p>
-                    </td>
-                    <td>
                     <p>Date</p>
-                    </td>
-                    <td>
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
                    <tr>
                     <td>
                     <p>Finish Date<span style='mso-tab-count:1'>    </span></p>
-                    </td>
-                    <td>
                     <p>Date</p>
-                    </td>
-                    <td>
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
                    <tr style='mso-yfti-irow:5;height:.5in'>
                     <td>
                     <p>Status</p>
-                    </td>
-                    <td>
                     <p>Category</p>
-                    </td>
-                    <td>
                     <p>Giống như Project Name bạn nên có một list các status như
                     not-yet-started, on-going, delay, finish</p>
                     </td>
@@ -208,44 +190,28 @@
                    <tr>
                     <td>
                     <p>Reporting Peson</p>
-                    </td>
-                    <td>
                     <p>String hoặc Category</p>
-                    </td>
-                    <td>
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
                    <tr>
                     <td>
                     <p>% Progress</p>
-                    </td>
-                    <td>
                     <p>Number</p>
-                    </td>
-                    <td>
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
                    <tr>
                     <td>
                     <p>Progress Description</p>
-                    </td>
-                    <td>
                     <p>String</p>
-                    </td>
-                    <td>
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
                    <tr>
                     <td>
                     <p>Lesson Learnt</p>
-                    </td>
-                    <td>
                     <p>String</p>
-                    </td>
-                    <td>
                     <p><o:p>&nbsp;</o:p></span></p>
                     </td>
                    </tr>
