--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -135,85 +135,65 @@
                 <table class="table table-bordered" style="width:100%;">
                 <thead>
                 <tr>
-                <th style="width: 20%; text-align: left;">
-                <h7>Tên trường thông tin</h7>
+                <th style="width: 20%; text-align: left;">Tên trường thông tin
                 </th>
-                <th style="width: 20%; text-align: left;">
-                <h7>Loại</h7>
+                <th style="width: 20%; text-align: left;">Loại
                 </th>
-                <th style="text-align: left;">
-                <h7>Ghi Chú</h7>
+                <th style="text-align: left;">Ghi Chú
                 </th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <td>
-                    <p>Project Name</p>
-                    <p>String hoặc Category</p>
-                    <p>Thường tên dự án sẽ có 1 list danh sách các dự án vậy nên bạn nên tạo
+                    Project Name</td>
+                    <td>String hoặc Category</td>
+                    <td>Thường tên dự án sẽ có 1 list danh sách các dự án vậy nên bạn nên tạo
                     ra một Category list cho các dự án tại sheet của mình ( Cách tạo: chọn cột
                     Project Name, Vào phần Data, Data Validation, Chọn item trong danh sách và
-                    list ra các tên dự án)</p>
-                    </td>
+                    list ra các tên dự án)</td>
+                </tr>
+                <tr>
+                    <td>Activity Name</td>
+                    <td>String</td>
+                    <td>Tên các hoạt động thường tuỳ thuộc vào dự án và người thực hiện nên
+                    không cố định tên nên mình để dạng string cho loại tên</td>
                    </tr>
                    <tr>
-                    <td>
-                    <p>Activity Name</p>
-                    <p>String</p>
-                    <p>Tên các hoạt động thường tuỳ thuộc vào dự án và người thực hiện nên
-                    không cố định tên nên mình để dạng string cho loại tên</p>
-                    </td>
+                    <td>Start Date</td>
+                    <td>Date</td>
+                    <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>
-                    <p>Start Date</p>
-                    <p>Date</p>
-                    <p><o:p>&nbsp;</o:p></span></p>
-                    </td>
-                   </tr>
-                   <tr>
-                    <td>
-                    <p>Finish Date<span style='mso-tab-count:1'>    </span></p>
-                    <p>Date</p>
-                    <p><o:p>&nbsp;</o:p></span></p>
-                    </td>
+                    <td>Finish Date</td>
+                    <td>Date</td>
+                    <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr style='mso-yfti-irow:5;height:.5in'>
-                    <td>
-                    <p>Status</p>
-                    <p>Category</p>
-                    <p>Giống như Project Name bạn nên có một list các status như
-                    not-yet-started, on-going, delay, finish</p>
-                    </td>
+                    <td>Status</td>
+                    <td>Category</td>
+                    <td>Giống như Project Name bạn nên có một list các status như
+                    not-yet-started, on-going, delay, finish</td>
                    </tr>
                    <tr>
-                    <td>
-                    <p>Reporting Peson</p>
-                    <p>String hoặc Category</p>
-                    <p><o:p>&nbsp;</o:p></span></p>
-                    </td>
+                    <td>Reporting Peson</td>
+                    <td>String hoặc Category</td>
+                    <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>
-                    <p>% Progress</p>
-                    <p>Number</p>
-                    <p><o:p>&nbsp;</o:p></span></p>
-                    </td>
+                    <td>% Progress</td>
+                    <td>Number</td>
+                    <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>
-                    <p>Progress Description</p>
-                    <p>String</p>
-                    <p><o:p>&nbsp;</o:p></span></p>
-                    </td>
+                    <td>Progress Description</td>
+                    <td>String</td>
+                    <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>
-                    <p>Lesson Learnt</p>
-                    <p>String</p>
-                    <p><o:p>&nbsp;</o:p></span></p>
-                    </td>
+                    <td>Lesson Learnt</td>
+                    <td>String</td>
+                    <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                 </tbody>
                 </table>
