--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -145,54 +145,54 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>
+                    <td style="width: 20%">
                     Project Name</td>
-                    <td>String hoặc Category</td>
+                    <td style="width: 20%">String hoặc Category</td>
                     <td>Thường tên dự án sẽ có 1 list danh sách các dự án vậy nên bạn nên tạo
                     ra một Category list cho các dự án tại sheet của mình ( Cách tạo: chọn cột
                     Project Name, Vào phần Data, Data Validation, Chọn item trong danh sách và
                     list ra các tên dự án)</td>
                 </tr>
                 <tr>
-                    <td>Activity Name</td>
-                    <td>String</td>
+                    <td style="width: 20%">Activity Name</td>
+                    <td style="width: 20%">String</td>
                     <td>Tên các hoạt động thường tuỳ thuộc vào dự án và người thực hiện nên
                     không cố định tên nên mình để dạng string cho loại tên</td>
                    </tr>
                    <tr>
-                    <td>Start Date</td>
-                    <td>Date</td>
+                    <td style="width: 20%">Start Date</td>
+                    <td style="width: 20%">Date</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>Finish Date</td>
-                    <td>Date</td>
+                    <td style="width: 20%">Finish Date</td>
+                    <td style="width: 20%">Date</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr style='mso-yfti-irow:5;height:.5in'>
-                    <td>Status</td>
-                    <td>Category</td>
+                    <td style="width: 20%">Status</td>
+                    <td style="width: 20%">Category</td>
                     <td>Giống như Project Name bạn nên có một list các status như
                     not-yet-started, on-going, delay, finish</td>
                    </tr>
                    <tr>
-                    <td>Reporting Peson</td>
-                    <td>String hoặc Category</td>
+                    <td style="width: 20%">Reporting Peson</td>
+                    <td style="width: 20%">String hoặc Category</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>% Progress</td>
-                    <td>Number</td>
+                    <td style="width: 20%">% Progress</td>
+                    <td style="width: 20%">Number</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>Progress Description</td>
-                    <td>String</td>
+                    <td style="width: 20%">Progress Description</td>
+                    <td><td style="width: 20%">String</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
-                    <td>Lesson Learnt</td>
-                    <td>String</td>
+                    <td style="width: 20%">Lesson Learnt</td>
+                    <td style="width: 20%">String</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                 </tbody>
