--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -169,7 +169,7 @@
                     <td style="width: 20%">Date</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
-                   <tr style='mso-yfti-irow:5;height:.5in'>
+                   <tr>
                     <td style="width: 20%">Status</td>
                     <td style="width: 20%">Category</td>
                     <td>Giống như Project Name bạn nên có một list các status như
@@ -187,7 +187,7 @@
                    </tr>
                    <tr>
                     <td style="width: 20%">Progress Description</td>
-                    <td><td style="width: 20%">String</td>
+                    <td style="width: 20%">String</td>
                     <td><o:p>&nbsp;</o:p></span></td>
                    </tr>
                    <tr>
