--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -132,7 +132,7 @@
                     <br/> -   Lesson learnt: Bài học kinh nghiệm
                 </p>
             <div class="table-responsive">
-                <table class="table table-bordered" style="width:100%;">
+                <table class="table table-hover table-bordered" style="width:100%;">
                 <thead>
                 <tr>
                 <th style="width: 20%; text-align: left;">Tên trường thông tin
