Update Tutorial page&css

--- a/Tutorials-VI.html
+++ b/Tutorials-VI.html
@@ -41,13 +41,17 @@
                     </div>
                 </div>
             </header>
-<div id="post-slider-container" class="post-slider-container type-page clearfix">
 
-    <div id="post-slider-wrap" class="post-slider-wrap clearfix">
+<div id="content" class="site-content slide-container clearfix">            
+    <div id="post-slider-container" class="post-slider-container type-page clearfix">
+        <div id="post-slider-wrap" class="post-slider-wrap clearfix">
+            <div data-type="AwesomeTableView" data-viewID="-LRqvRtdnGGhv9rTZvdW"></div>
+        </div>
 
-    <div data-type="AwesomeTableView" data-viewID="-LRqvRtdnGGhv9rTZvdW"></div>
+<paper-card elevation="2" aria-label="">
+    <div data-type="AwesomeTableView" data-viewID="-LRrBLin0pE5xZtoHPYZ"></div>    
+</paper-card>
 
-    </div>
 </div>
 
 
