Update All Vi Site

--- a/VI/Tutorials/Post1-Vi.html
+++ b/VI/Tutorials/Post1-Vi.html
@@ -32,10 +32,10 @@
                                     <li class="active"><a href="../../../index-VI.html">Trang Chủ</a></li>
                                     <li class = "nav-visible"><a href="../../../About-VI.html">Về Tôi</a></li>
                                     <li><a href="../../../Tools-VI.html">Công Cụ</a></li>
-                                    <li><a href="#">Hướng Dẫn</a></li>
+                                    <li><a href="Tutorials-VI.html">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
-                                    <a class="btn btn-info" href="https://nhungleh.com/EN/Tools/Post3-En.html">EN</a>
+                                    <a class="btn btn-info" href="https://nhungleh.com/EN/Tutorials/Post3-En.html">EN</a>
                                 </form>
                             </div>
                     </div>
@@ -69,7 +69,7 @@
         <div class="col span_4_of_6">
 
 <h4 style='text-align:justify'>Phần 1: Cơ bản</span></h4>
-                <p style='text-align:justify'>Như bài viết trước đã đề cập tính năng của Awesome Table trong việc trình bày xử lý dữ liệu. Tuy nhiên vì sao phải trình bày dữ liệu, trình bày dữ liệu là gì thì cần bắt đầu hiểu một cách hệ thống về quy trình xử lý. Đó là bạn bắt đầu với việc đi chợ mua nguyên liệu (thu thập số liệu) sau đó chế biến (xử lý số liệu đó) và cuối cùng là trình bày nó cho thực khách của bạn. Trình bày món ăn cũng như bạn trình bày xử lý số liệu vậy. Quy trình xử lý dữ liệu được thể hiện như hình minh hoạ: </p>
+                <p style='text-align:justify'>Như bài viết <a onclick="OpenInNewTab('https://nhungleh.com/VI/Tools/Post3-Vi.html')"></a>trước đã đề cập tính năng của Awesome Table trong việc trình bày xử lý dữ liệu. Tuy nhiên vì sao phải trình bày dữ liệu, trình bày dữ liệu là gì thì cần bắt đầu hiểu một cách hệ thống về quy trình xử lý. Đó là bạn bắt đầu với việc đi chợ mua nguyên liệu (thu thập số liệu) sau đó chế biến (xử lý số liệu đó) và cuối cùng là trình bày nó cho thực khách của bạn. Trình bày món ăn cũng như bạn trình bày xử lý số liệu vậy. Quy trình xử lý dữ liệu được thể hiện như hình minh hoạ: </p>
 
                  <p style="text-align:center;"> <img src="https://lh3.googleusercontent.com/dqcpjW-5sqoilJEliM6tfdy59q_guaL-1m88upSn2BmBbdN6WYTurKbtn9oyIWfXLK5Xd05mskNKrRBaygGIEMqkLgdAV50R9G9eVTEkvzG3kHEqvgVLA6inTJ88aHKfing0ERcVxANcENIQZ_ek6jgWtx7pavBMNijFPAcQUOuGSYd64Z5FRPSuvuCw3A5Q2rdkMknOy3tISAheuZgToUYBjw03dC7D__9AJEMIDEeSx6apRVa2KRcK8j_zygszpp1e6MRupqiXegsybY0w9ZbgbVqwp2il1B1YuSE0dOMCUZ3JdtOXLa-oQ5OjjeU2GWTtC4f2sqoS81TWRiD7hkSecNc95IkUCLGr_IVR0h6VXPqgndjEeHgupx6A09Pb6Bttf0tMHpZqHUSigicVRdZ-QnHrZynL2tCmp6IwOlyy0m2lzFIfvKiyiR_Y2YDj92z6sSkZkTfPsF0Ka_zPENItueKSiaRlXK9WD_O-sUpw3a3iFv_5fa5NkoNaDrmtNByINLLnxrlb_WK0dv6pBpLWNGfC71dgedDEzjZraND33k-SrMpRLHcXCqQlgijtjwwsZNTWxVjOzI_VvIhpqF2BHnPZUfSRQclyxHW0n-Gighjw5Nv8B_cVaah5ybTzKdKhw-tyh7Y5TVbRdl5cT0NEbiy60Y145DtrsctBG5mjoQ2sU8q3VFV1Gpx3JhmV8RIbSd6Ieg6gY46XRxklunK8pPfyvdeXuMW5BA=w638-h479-no" width="600" height="375" alt=""></p>
 
