--- a/Tools.html
+++ b/Tools.html
@@ -32,7 +32,7 @@
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li class = "nav-visible"><a href="About.html">About</a></li>
                                     <li><a href="Tools.html">Tools</a></li>
-                                    <li><a href="#">Tutorials</a></li>
+                                    <li><a href="Tutorials.html">Tutorials</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="Tools-VI.html">VIE</a>
