--- a/About.html
+++ b/About.html
@@ -23,14 +23,14 @@
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="#">NhungLe</a>
+                            <a class="brand" href="index.html">NhungLe</a>
                          </div>
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li class = "nav-visible"><a href="About.html">About</a></li>
                                     <li><a href="Tools.html">Tools</a></li>
-                                    <li><a href="#">Tutorials</a></li>
+                                    <li><a href="Tutorials.html">Tutorials</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="About-VI.html">VIE</a>
