--- a/Tutorials.html
+++ b/Tutorials.html
@@ -29,10 +29,10 @@
                          </div>
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
-                                    <li class="active"><a href="index.html">Trang Chủ</a></li>
-                                    <li class = "nav-visible"><a href="About.html">Về Tôi</a></li>
-                                    <li><a href="Tools.html">Công Cụ</a></li>
-                                    <li><a href="#">Hướng Dẫn</a></li>
+                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class = "nav-visible"><a href="About.html">About</a></li>
+                                    <li><a href="Tools.html">Tools</a></li>
+                                    <li><a href="Tutorials.html">Tutorials</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="Tutorials-VI.html">VI</a>
