--- a/About.html
+++ b/About.html
@@ -62,6 +62,7 @@
 </script>
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="Developer/common-files/js/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"196276fe57cf1dc27cd454d7c","lid":"82978b5514","uniqueMethods":true}) })</script>
         <script src="Developer/flat-ui/js/bootstrap.min.js"></script>
         <script src="Developer/common-files/js/modernizr.custom.js"></script>
         <script src="Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
