Update path Tutorial post1

--- a/VI/Tools/Post2-Vi.html
+++ b/VI/Tools/Post2-Vi.html
@@ -31,7 +31,7 @@
                                     <li class="active"><a href="../../../index-VI.html">Trang Chủ</a></li>
                                     <li class = "nav-visible"><a href="../../../About-VI.html">Về Tôi</a></li>
                                     <li><a href="../../../Tools-VI.html">Công Cụ</a></li>
-                                    <li><a href="Tutorials-VI.html">Hướng Dẫn</a></li>
+                                    <li><a href="../../../Tutorials-VI.html">Hướng Dẫn</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="https://nhungleh.com/EN/Tools/Post2-En.html">EN</a>
