--- a/EN/Tools/Post1-En.html
+++ b/EN/Tools/Post1-En.html
@@ -31,7 +31,7 @@
 	                                <li class="active"><a href="https://nhungleh.com/index.html">Home</a></li>
 	                                <li class = "nav-visible"><a href="https://nhungleh.com/index.html">About</a></li>
 	                                <li><a href="https://nhungleh.com/Tools.html">Tools</a></li>
-	                                <li><a href="Tutorials.html">Tutorials</a></li>
+	                                <li><a href="../../../Tutorials.html">Tutorials</a></li>
 	                            </ul>
 	                            <form class="navbar-form pull-right">
 	                                <a class="btn btn-info" href="https://nhungleh.com/VI/Tools/Post1-Vi.html">VIE</a>
