--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </header>
             <section class="header-10-sub v-center bg-midnight-blue">
                 <div class="background">
-                <img src="img/My Logo Transp.png" style="background-size:contain; height:81vh; z-index:1; background-color: #117668;" alt="">
+                <img src="img/My Logo Transp.png" style="background-size:contain; height:auto; z-index:1; margin-top:5em; ; background-color: #117668;" alt="">
                 </div>
               
                 <a class="control-btn fui-arrow-down" href="#section2"> </a>
