Update theme color - background

--- a/index-VI.html
+++ b/index-VI.html
@@ -41,7 +41,7 @@
             </header>
             <section class="header-10-sub v-center bg-midnight-blue">
                 <div class="background">
-                <img src="img/My Logo Transp.png" style="background-size:contain; height:auto; z-index:1; margin-top:5em; ; background-color: #117668;" alt="">
+                <img src="img/My Logo Transp.png" style="background-size:contain; height:auto; z-index:1; margin-top:5em; ; background-color: #7A0000;" alt="">
                 </div>
      
                 <a class="control-btn fui-arrow-down" href="#section2"> </a>
